--- a/package.json
+++ b/package.json
@@ -26,7 +26,8 @@
     "multer": "^2.0.1",
     "multer-storage-cloudinary": "^4.0.0",
     "nodemailer": "^7.0.3",
-    "pdfkit": "^0.17.1"
+    "pdfkit": "^0.17.1",
+    "puppeteer": "^24.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
